--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Studio</title>
+  </head>
+  <body>
+    <header>
+      <menu>
+      <a href="/"><span>WEB</span>STUDIO<span</a>
+      <nav>
+        <a href="/Studio">Studio</a>
+        <a href="/Portfolio">Portfolio</a>
+        <a href="/Contacts">Contacts</a>
+      </nav>
+      </menu>
+      <a href="mailto" info@devstudio.com>info@devstudio.com</a>
+      <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
+    </header>
+    <section>
+      <dl>
+        <dt>Strategy</dt>
+        <dd>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+        </dd>
+        <dt>Punctuality</dt>
+        <dd>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+        </dd>
+        <dt>Diligence</dt>
+        <dd>
+          Research and confirm brands that present the strongest digital growth
+          opportunities and minimize risk.
+        </dd>
+        <dt>Technologies</dt>
+        <dd>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </dd>
+      </dl>
+    </section>
+      <section>
+      <h2>What are we doing</h2>
+      <img src="images/img1.jpg" />
+      <img src="images/img2.jpg" />
+      <img src="images/img3.jpg" />
+      </section>
 
+      <section>
+      <h2>Our Team</h2>
+      <figure>
+      <img src="images/team1.jpg" alt=""/>
+      <figcaption>Mark Guerrero Product Designer</figcaption>  
+      </figure>
+
+      <figure>
+      <img src="images/team2.jpg" alt=""/>
+      <figcaption>Tom Ford Frontend Developer</figcaption>
+      </figure>
+
+      <figure>
+      <img src="images/team3.jpg" alt=""/>
+      <figcaption>Camila Garcia Marketing</figcaption>
+      </figure>
+
+      <img src="images/team4.jpg" alt=""/>
+      <figcaption>Daniel Wilson UI Designer</figcaption>
+      </figure>
+      </section>
+    </main>
+    <footer>
+      <a href="/"><span>WEB</span>STUDIO<span</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
+</html>
